--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ __pycache__
 myvenv
 db.sqlite3
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
