--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,7 @@
+container_commands:
+  01_migrate:
+    command: "python manage.py migrate"
+
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: mysite/wsgi.py
