--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,6 +1,8 @@
 container_commands:
   01_migrate:
     command: "python manage.py migrate"
+  02_collectstatic:
+    command: "python manage.py collectstatic --noinput"
 
 option_settings:
   aws:elasticbeanstalk:container:python:
