--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -6,6 +6,8 @@ container_commands:
   03_createsu:
     command: "python manage.py createsu"
     leader_only: true
+  04_chmod_sqlite:
+    command: "chmod 666 db.sqlite3"
 
 option_settings:
   aws:elasticbeanstalk:container:python:
